--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,10 +1,12 @@
 {% include base_path %}
 
 <meta charset="utf-8">
+<meta name="google-site-verification" content="EUir6Q0COSF8CWWAF_75PrRHYPzPOyhpvSzDODy5iis" />
 
 {% include seo.html %}
 
-<link href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ base_path }}/feed.xml{% endif %}" type="application/atom+xml" rel="alternate" title="{{ site.title }} Feed">
+<link href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ base_path }}/feed.xml{% endif %}"
+  type="application/atom+xml" rel="alternate" title="{{ site.title }} Feed">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
