Add Google site verification and Person schema markup

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,5 +14,37 @@
   document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + ' js ';
 </script>
 
+<!-- Schema Markup for Person -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Kosal Chansothay",
+  "url": "https://kosalchansothay.github.io/",
+  "image": "https://kosalchansothay.github.io/images/KosalChansothay.jpg",
+  "sameAs": [
+    "https://www.linkedin.com/in/kosal-chansothay-985b52297",
+    "https://github.com/KosalChansothay"
+  ],
+  "jobTitle": "Data Science Student at ITC | Machine Learning & Deep Learning Enthusiast",
+  "worksFor": {
+    "@type": "Organization",
+    "name": "Institute of Technology of Cambodia"
+  },
+  "alumniOf": {
+    "@type": "CollegeOrUniversity",
+    "name": "Institute of Technology of Cambodia"
+  },
+  "knowsAbout": [
+    "Data Science",
+    "Natural Language Processing",
+    "Machine Learning",
+    "Computer Vision",
+    "Qwen3 LLM",
+    "LoRA Fine-tuning"
+  ]
+}
+</script>
+
 <!-- For all browsers -->
 <link rel="stylesheet" href="{{ base_path }}/assets/css/main.css">
